--- a/a4/assets/CSS/style.css
+++ b/a4/assets/CSS/style.css
@@ -40,7 +40,7 @@ nav {
 
 nav a {
   float: left;
-  color: #f2f2f2;
+  color: #B67BE3;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -92,8 +92,6 @@ aside{
     background-image: url(../photos/photo1.jpg)
 
 }
-
-
 
 
 .gallery{
